update jwt secret, login response
